force-app/main/default/objects/Campaign/fields/Actual_KPI__c.field-meta.xml
<CustomField>
    <fullName>Actual_KPI__c</fullName>
    <label>Actual KPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>