force-app/main/default/objects/Campaign/fields/Actual_Revenue_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_in_Campaign__c</fullName>
    <label>Actual Revenue in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>