force-app/main/default/objects/Campaign/fields/Budget_New_lead__c.field-meta.xml
<CustomField>
    <fullName>Budget_New_lead__c</fullName>
    <formula>if(Total_campaign_Member_New_lead__c &gt;=0 , ActualCost	/ Total_campaign_Member_New_lead__c , ActualCost)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget/ New lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>