force-app/main/default/objects/Campaign/fields/Bulletin_No__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_No__c</fullName>
    <label>Bulletin No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>