force-app/main/default/objects/Campaign/fields/Campain_Number__c.field-meta.xml
<CustomField>
    <fullName>Campain_Number__c</fullName>
    <label>Campain Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>