force-app/main/default/objects/Campaign/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>102768</length>
    <type>LongTextArea</type>
</CustomField>