force-app/main/default/objects/Campaign/fields/Forecast_Budget_Cost_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Cost_in_Campaign__c</fullName>
    <label>Forecast Budget Cost in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>