force-app/main/default/objects/Campaign/fields/Forecast_KPI__c.field-meta.xml
<CustomField>
    <fullName>Forecast_KPI__c</fullName>
    <label>Forecast KPI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>