force-app/main/default/objects/Campaign/fields/Issue_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Quantity__c</fullName>
    <label>Issue Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>