force-app/main/default/objects/Campaign/fields/KPI_Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>KPI_Unit_Measure__c</fullName>
    <label>KPI Unit Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>