force-app/main/default/objects/Campaign/fields/Note_Reply__c.field-meta.xml
<CustomField>
    <fullName>Note_Reply__c</fullName>
    <label>Note Reply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>