force-app/main/default/objects/Campaign/fields/Number_of_order_bike_VAT__c.field-meta.xml
<CustomField>
    <fullName>Number_of_order_bike_VAT__c</fullName>
    <label>Number of order bike (VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>