force-app/main/default/objects/Campaign/fields/Number_of_order_Service_Complete__c.field-meta.xml
<CustomField>
    <fullName>Number_of_order_Service_Complete__c</fullName>
    <label>Number of order Service Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>