force-app/main/default/objects/Campaign/fields/Number_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Number_Voucher__c</fullName>
    <label>Number Voucher</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>