force-app/main/default/objects/Campaign/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Promotion Item</label>
    <referenceTo>Promotion_Item__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>