force-app/main/default/objects/Campaign/fields/Reset_Report__c.field-meta.xml
<CustomField>
    <fullName>Reset_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Report</label>
    <type>Checkbox</type>
</CustomField>