force-app/main/default/objects/Campaign/fields/Service_Apply__c.field-meta.xml
<CustomField>
    <fullName>Service_Apply__c</fullName>
    <label>Service Apply</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>PCA</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>