force-app/main/default/objects/Campaign/fields/Stage_Approval__c.field-meta.xml
<CustomField>
    <fullName>Stage_Approval__c</fullName>
    <label>Stage-In Approval Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>In Director DO</fullName>
            </value>
            <value>
                <fullName>In AM Marketing</fullName>
            </value>
            <value>
                <fullName>In Finance (optional)</fullName>
            </value>
            <value>
                <fullName>In Project manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>