force-app/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Email marketing</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Social media ads</fullName>
            </value>
            <value>
                <fullName>Mobile Marketing</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Off-line</fullName>
            </value>
            <value>
                <fullName>Test Ride</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Product Launching</fullName>
            </value>
            <value>
                <fullName>Brand launching</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>PR Booking</fullName>
            </value>
            <value>
                <fullName>PR Seeding</fullName>
            </value>
            <value>
                <fullName>Video/ photoshoot</fullName>
            </value>
            <value>
                <fullName>KOLs/ Influencers</fullName>
            </value>
            <value>
                <fullName>Content creation</fullName>
            </value>
            <value>
                <fullName>Media monitoring</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
                <isActive>false</isActive>
                <label>Advertising</label>
            </value>
            <value>
                <fullName>Public Relation</fullName>
                <isActive>false</isActive>
                <label>Public Relation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>