force-app/main/default/objects/Campaign/fields/Sum_Amount_Order_PCA_from_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Sum_Amount_Order_PCA_from_Campaign__c</fullName>
    <label>Sum Amount Order PCA from Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>