force-app/main/default/objects/Campaign/fields/Sum_Amount_Order_Service_From_campaign__c.field-meta.xml
<CustomField>
    <fullName>Sum_Amount_Order_Service_From_campaign__c</fullName>
    <label>Sum Amount Order  Service From campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>