force-app/main/default/objects/Campaign/fields/Total_Campaign_member_Old_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_member_Old_Account__c</fullName>
    <label>Total Campaign member - Old Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>