force-app/main/default/objects/Campaign/fields/Total_campaign_Member_Old_lead__c.field-meta.xml
<CustomField>
    <fullName>Total_campaign_Member_Old_lead__c</fullName>
    <label>Total campaign Member - Old lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>