force-app/main/default/objects/Campaign/fields/Total_round_to_sale_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_round_to_sale_Account__c</fullName>
    <label>Total round to sale - Account</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Round To SALE</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>