force-app/main/default/objects/Campaign/fields/Total_Round_To_Sale_Lead__c.field-meta.xml
<CustomField>
    <fullName>Total_Round_To_Sale_Lead__c</fullName>
    <formula>Total_round_to_sale_New_Lead__c + Total_round_to_sale_Old_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Round To Sale Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>