force-app/main/default/objects/Campaign/fields/Total_round_to_sale_Old_Lead__c.field-meta.xml
<CustomField>
    <fullName>Total_round_to_sale_Old_Lead__c</fullName>
    <label>Total round to sale - Old Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>