force-app/main/default/objects/Campaign/fields/Use_For__c.field-meta.xml
<CustomField>
    <fullName>Use_For__c</fullName>
    <label>Use For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL DO</fullName>
                <default>true</default>
                <label>ALL DO</label>
            </value>
            <value>
                <fullName>Sài Gòn</fullName>
            </value>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>