force-app/main/default/objects/Campaign/fields/Voucher_Issued__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Issued__c</fullName>
    <label>Voucher Issued</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>