force-app/main/default/objects/Campaign/fields/Voucher_Name__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Name__c</fullName>
    <label>Voucher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>