force-app/main/default/objects/Campaign/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
                <isActive>false</isActive>
                <label>Benefit</label>
            </value>
            <value>
                <fullName>Trial</fullName>
                <isActive>false</isActive>
                <label>Trial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>