force-app/main/default/objects/Campaign/recordTypes/Send_Email.recordType-meta.xml
<RecordType>
    <fullName>Send_Email</fullName>
    <active>true</active>
    <label>Send Email</label>
</RecordType>