force-app/main/default/objects/Campaign/recordTypes/Special_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Special_Campaign</fullName>
    <active>true</active>
    <label>Special Campaign</label>
</RecordType>