force-app/main/default/objects/Campaign/listViews/Campaign_Voucher_Cash.listView-meta.xml
<ListView>
    <fullName>Campaign_Voucher_Cash</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Category__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Voucher_Cash</value>
    </filters>
    <label>Campaign Voucher Cash</label>
</ListView>